--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Bachelor Party Bash</header>
+    <header>Brendan's Bachelor Party</header>
     <div class="container">
         <div class="section" id="stay">
             <h2>Where We're Staying</h2>
